# cybershield-oss

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cybershield/: __init__.py  cli.py  config.py  core.py
cybershield/ai/: __init__.py  client.py  explainer.py  tutor.py
cybershield/reports/: __init__.py  base.py  html.py  json_report.py
cybershield/scanners/: __init__.py  api_keys.py  auth.py  base.py  csrf.py  sqli.py  xss.py
cybershield/utils/: __init__.py  http.py  logger.py  validators.py
docs/: SECURITY.md
examples/: basic_scan.py  custom_scanner.py
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py  test_scanners.py
